[gd_scene load_steps=4 format=2]

[ext_resource path="res://interface/fonts/montserrat_eb_48.tres" type="DynamicFont" id=1]
[ext_resource path="res://interface/Crosshair/Crosshair.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/Menus/Crosshair Menu.gd" type="Script" id=3]

[node name="CrosshairItems" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1920.0
margin_bottom = -1080.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.129412, 0.4, 0.486275, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CrosshairReadout" parent="." instance=ExtResource( 2 )]

[node name="LengthReadout" type="Label" parent="."]
margin_left = 1272.0
margin_top = 224.0
margin_right = 1289.0
margin_bottom = 276.0
custom_fonts/font = ExtResource( 1 )
text = "1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WidthReadout" type="Label" parent="."]
margin_left = 1272.0
margin_top = 280.0
margin_right = 1289.0
margin_bottom = 332.0
custom_fonts/font = ExtResource( 1 )
text = "1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpacityReadout" type="Label" parent="."]
margin_left = 1272.0
margin_top = 336.0
margin_right = 1289.0
margin_bottom = 388.0
custom_fonts/font = ExtResource( 1 )
text = "1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GapReadout" type="Label" parent="."]
margin_left = 1272.0
margin_top = 384.0
margin_right = 1289.0
margin_bottom = 436.0
custom_fonts/font = ExtResource( 1 )
text = "1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BorderSizeReadout" type="Label" parent="."]
margin_left = 1272.0
margin_top = 544.0
margin_right = 1289.0
margin_bottom = 596.0
custom_fonts/font = ExtResource( 1 )
text = "1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BorderOpacityReadout" type="Label" parent="."]
margin_left = 1272.0
margin_top = 600.0
margin_right = 1289.0
margin_bottom = 652.0
custom_fonts/font = ExtResource( 1 )
text = "1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DotSizeReadout" type="Label" parent="."]
margin_left = 1272.0
margin_top = 824.0
margin_right = 1289.0
margin_bottom = 876.0
custom_fonts/font = ExtResource( 1 )
text = "1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DotOpacityReadout" type="Label" parent="."]
margin_left = 1272.0
margin_top = 880.0
margin_right = 1289.0
margin_bottom = 932.0
custom_fonts/font = ExtResource( 1 )
text = "1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="crosshair" type="VBoxContainer" parent="CenterContainer"]
margin_left = 664.0
margin_top = 68.0
margin_right = 1256.0
margin_bottom = 1012.0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crosshair Settings" type="Label" parent="CenterContainer/crosshair"]
margin_right = 592.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "Crosshair Settings"
align = 1

[node name="MainSettings" type="VBoxContainer" parent="CenterContainer/crosshair"]
margin_top = 92.0
margin_right = 592.0
margin_bottom = 368.0

[node name="Crosshair" type="Label" parent="CenterContainer/crosshair/MainSettings"]
margin_right = 592.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "Crosshair"
align = 1

[node name="Length" type="HBoxContainer" parent="CenterContainer/crosshair/MainSettings"]
margin_top = 56.0
margin_right = 592.0
margin_bottom = 108.0
custom_constants/separation = 40
alignment = 1

[node name="Title4" type="Label" parent="CenterContainer/crosshair/MainSettings/Length"]
margin_left = 46.0
margin_right = 206.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "Length"
align = 1

[node name="HSlider" type="HSlider" parent="CenterContainer/crosshair/MainSettings/Length"]
margin_left = 246.0
margin_right = 546.0
margin_bottom = 16.0
rect_min_size = Vector2( 300, 0 )
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Width" type="HBoxContainer" parent="CenterContainer/crosshair/MainSettings"]
margin_top = 112.0
margin_right = 592.0
margin_bottom = 164.0
custom_constants/separation = 60
alignment = 1

[node name="Title4" type="Label" parent="CenterContainer/crosshair/MainSettings/Width"]
margin_left = 46.0
margin_right = 186.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "Width"
align = 1

[node name="HSlider" type="HSlider" parent="CenterContainer/crosshair/MainSettings/Width"]
margin_left = 246.0
margin_right = 546.0
margin_bottom = 16.0
rect_min_size = Vector2( 300, 0 )
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Opacity" type="HBoxContainer" parent="CenterContainer/crosshair/MainSettings"]
margin_top = 168.0
margin_right = 592.0
margin_bottom = 220.0
custom_constants/separation = 40
alignment = 1

[node name="Title4" type="Label" parent="CenterContainer/crosshair/MainSettings/Opacity"]
margin_left = 39.0
margin_right = 213.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "Opacity"
align = 1

[node name="HSlider" type="HSlider" parent="CenterContainer/crosshair/MainSettings/Opacity"]
margin_left = 253.0
margin_right = 553.0
margin_bottom = 16.0
rect_min_size = Vector2( 300, 0 )
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gap" type="HBoxContainer" parent="CenterContainer/crosshair/MainSettings"]
margin_top = 224.0
margin_right = 592.0
margin_bottom = 276.0
custom_constants/separation = 40
alignment = 1

[node name="Title4" type="Label" parent="CenterContainer/crosshair/MainSettings/Gap"]
margin_left = 82.0
margin_right = 169.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "Gap"
align = 1

[node name="HSlider" type="HSlider" parent="CenterContainer/crosshair/MainSettings/Gap"]
margin_left = 209.0
margin_right = 509.0
margin_bottom = 16.0
rect_min_size = Vector2( 300, 0 )
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BorderSettings" type="VBoxContainer" parent="CenterContainer/crosshair"]
margin_top = 408.0
margin_right = 592.0
margin_bottom = 628.0

[node name="Border" type="Label" parent="CenterContainer/crosshair/BorderSettings"]
margin_right = 592.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "Crosshair Border"
align = 1

[node name="BorderTrueFalse" type="HBoxContainer" parent="CenterContainer/crosshair/BorderSettings"]
margin_top = 56.0
margin_right = 592.0
margin_bottom = 108.0
custom_constants/separation = 300
alignment = 1

[node name="Title4" type="Label" parent="CenterContainer/crosshair/BorderSettings/BorderTrueFalse"]
margin_left = 32.0
margin_right = 184.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "Enable"
align = 1

[node name="TrueFalse" type="CheckButton" parent="CenterContainer/crosshair/BorderSettings/BorderTrueFalse"]
margin_left = 484.0
margin_right = 560.0
margin_bottom = 52.0
pressed = true
align = 1

[node name="BorderSize" type="HBoxContainer" parent="CenterContainer/crosshair/BorderSettings"]
margin_top = 112.0
margin_right = 592.0
margin_bottom = 164.0
custom_constants/separation = 0
alignment = 1

[node name="Title4" type="Label" parent="CenterContainer/crosshair/BorderSettings/BorderSize"]
margin_left = 28.0
margin_right = 284.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "Border Size"
align = 1

[node name="HSlider" type="HSlider" parent="CenterContainer/crosshair/BorderSettings/BorderSize"]
margin_left = 284.0
margin_right = 564.0
margin_bottom = 16.0
rect_min_size = Vector2( 280, 0 )
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BorderOpacity" type="HBoxContainer" parent="CenterContainer/crosshair/BorderSettings"]
margin_top = 168.0
margin_right = 592.0
margin_bottom = 220.0
custom_constants/separation = 20
alignment = 1

[node name="Title4" type="Label" parent="CenterContainer/crosshair/BorderSettings/BorderOpacity"]
margin_left = 26.0
margin_right = 366.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "Border Opacity"
align = 1

[node name="HSlider" type="HSlider" parent="CenterContainer/crosshair/BorderSettings/BorderOpacity"]
margin_left = 386.0
margin_right = 566.0
margin_bottom = 16.0
rect_min_size = Vector2( 180, 0 )
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DotSettings" type="VBoxContainer" parent="CenterContainer/crosshair"]
margin_top = 668.0
margin_right = 592.0
margin_bottom = 944.0

[node name="Dot" type="Label" parent="CenterContainer/crosshair/DotSettings"]
margin_right = 592.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "Crosshair Dot"
align = 1

[node name="DotTrueFalse" type="HBoxContainer" parent="CenterContainer/crosshair/DotSettings"]
margin_top = 56.0
margin_right = 592.0
margin_bottom = 108.0
custom_constants/separation = 300
alignment = 1

[node name="Title4" type="Label" parent="CenterContainer/crosshair/DotSettings/DotTrueFalse"]
margin_left = 32.0
margin_right = 184.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "Enable"
align = 1

[node name="TrueFalse" type="CheckButton" parent="CenterContainer/crosshair/DotSettings/DotTrueFalse"]
margin_left = 484.0
margin_right = 560.0
margin_bottom = 52.0
pressed = true
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="DotSize" type="HBoxContainer" parent="CenterContainer/crosshair/DotSettings"]
margin_top = 112.0
margin_right = 592.0
margin_bottom = 164.0
custom_constants/separation = 60
alignment = 1

[node name="Title4" type="Label" parent="CenterContainer/crosshair/DotSettings/DotSize"]
margin_left = 34.0
margin_right = 218.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "Dot Size"
align = 1

[node name="HSlider" type="HSlider" parent="CenterContainer/crosshair/DotSettings/DotSize"]
margin_left = 278.0
margin_right = 558.0
margin_bottom = 16.0
rect_min_size = Vector2( 280, 0 )
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DotOpacity" type="HBoxContainer" parent="CenterContainer/crosshair/DotSettings"]
margin_top = 168.0
margin_right = 592.0
margin_bottom = 220.0
custom_constants/separation = 10
alignment = 1

[node name="Title4" type="Label" parent="CenterContainer/crosshair/DotSettings/DotOpacity"]
margin_left = 17.0
margin_right = 285.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "Dot Opacity"
align = 1

[node name="HSlider" type="HSlider" parent="CenterContainer/crosshair/DotSettings/DotOpacity"]
margin_left = 295.0
margin_right = 575.0
margin_bottom = 16.0
rect_min_size = Vector2( 280, 0 )
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DotBorder" type="HBoxContainer" parent="CenterContainer/crosshair/DotSettings"]
margin_top = 224.0
margin_right = 592.0
margin_bottom = 276.0
custom_constants/separation = 150
alignment = 1

[node name="Title4" type="Label" parent="CenterContainer/crosshair/DotSettings/DotBorder"]
margin_right = 366.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "Dot Uses Border"
align = 1

[node name="TrueFalse" type="CheckButton" parent="CenterContainer/crosshair/DotSettings/DotBorder"]
margin_left = 516.0
margin_right = 592.0
margin_bottom = 52.0
pressed = true
align = 1

[node name="CrosshairColor" type="VBoxContainer" parent="."]
margin_left = 1538.0
margin_top = 32.0
margin_right = 1880.0
margin_bottom = 522.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CrosshairColor"]
margin_right = 342.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "Crosshair Color"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="CrosshairColor" type="ColorPicker" parent="CrosshairColor"]
margin_top = 56.0
margin_right = 342.0
margin_bottom = 516.0
edit_alpha = false
presets_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DotColor" type="VBoxContainer" parent="."]
margin_left = 1538.0
margin_top = 540.0
margin_right = 1880.0
margin_bottom = 1030.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DotColor"]
margin_right = 342.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "Dot Color"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="DotColor" type="ColorPicker" parent="DotColor"]
margin_top = 56.0
margin_right = 342.0
margin_bottom = 516.0
edit_alpha = false
presets_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="CenterContainer/crosshair/MainSettings/Length/HSlider" to="." method="_on_crosshair_length_changed"]
[connection signal="value_changed" from="CenterContainer/crosshair/MainSettings/Width/HSlider" to="." method="_on_crosshair_width_changed"]
[connection signal="value_changed" from="CenterContainer/crosshair/MainSettings/Opacity/HSlider" to="." method="_on_crosshair_opacity_changed"]
[connection signal="value_changed" from="CenterContainer/crosshair/MainSettings/Gap/HSlider" to="." method="_on_gap_changed"]
[connection signal="toggled" from="CenterContainer/crosshair/BorderSettings/BorderTrueFalse/TrueFalse" to="." method="_on_border_toggled"]
[connection signal="value_changed" from="CenterContainer/crosshair/BorderSettings/BorderSize/HSlider" to="." method="_on_border_size_changed"]
[connection signal="value_changed" from="CenterContainer/crosshair/BorderSettings/BorderOpacity/HSlider" to="." method="_on_border_opacity_changed"]
[connection signal="toggled" from="CenterContainer/crosshair/DotSettings/DotTrueFalse/TrueFalse" to="." method="_on_dot_toggled"]
[connection signal="value_changed" from="CenterContainer/crosshair/DotSettings/DotSize/HSlider" to="." method="_on_dot_size_changed"]
[connection signal="value_changed" from="CenterContainer/crosshair/DotSettings/DotOpacity/HSlider" to="." method="_on_dot_opacity_changed"]
[connection signal="toggled" from="CenterContainer/crosshair/DotSettings/DotBorder/TrueFalse" to="." method="_on_dot_border_toggled"]
[connection signal="color_changed" from="CrosshairColor/CrosshairColor" to="." method="_on_crosshair_color_changed"]
[connection signal="color_changed" from="DotColor/DotColor" to="." method="_on_crosshair_dot_color_changed"]
